// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render correctly 1`] = `
<div>
  <button
    class="jsx-2034276802 btn "
    type="button"
  >
    <div
      class="text"
    >
      Button
    </div>
  </button>
</div>
`;

exports[`Button should render empty button correctly 1`] = `<Memo />`;

exports[`Button should render special styles 1`] = `
<div>
  <div>
    <button
      class="jsx-2034276802 btn "
      type="button"
    >
      <div
        class="text"
      >
        button
      </div>
    </button>
    <button
      class="jsx-411751414 btn "
      type="button"
    >
      <div
        class="text"
      >
        button
      </div>
    </button>
    <button
      class="jsx-2093748726 btn "
      type="button"
    >
      <div
        class="text"
      >
        button
      </div>
    </button>
    <button
      class="jsx-3543154870 btn "
      type="button"
    >
      <div
        class="jsx-3416748964 btn-loading"
      >
        <div
          class="jsx-192632595 loading-container"
        >
          <span
            class="jsx-192632595 loading"
          >
            <i
              class="jsx-192632595"
            />
            <i
              class="jsx-192632595"
            />
            <i
              class="jsx-192632595"
            />
          </span>
        </div>
      </div>
      <div
        class="text"
      >
        button
      </div>
    </button>
    <button
      class="jsx-3131001525 btn "
      type="button"
    >
      <div
        class="text"
      >
        button
      </div>
    </button>
    <button
      class="jsx-3680611982 btn "
      type="button"
    >
      <div
        class="text"
      >
        button
      </div>
    </button>
    <button
      class="jsx-2034276802 btn "
      type="button"
    >
      <div
        class="text"
      >
        button
      </div>
    </button>
  </div>
</div>
`;

exports[`Button should support all sizes 1`] = `
<div>
  <div>
    <button
      class="jsx-2028146796 btn "
      type="button"
    >
      <div
        class="text"
      />
    </button>
    <button
      class="jsx-2265457494 btn "
      type="button"
    >
      <div
        class="text"
      />
    </button>
    <button
      class="jsx-2034276802 btn "
      type="button"
    >
      <div
        class="text"
      />
    </button>
    <button
      class="jsx-907809602 btn "
      type="button"
    >
      <div
        class="text"
      />
    </button>
  </div>
</div>
`;

exports[`Button should support all types 1`] = `
<div>
  <div>
    <button
      class="jsx-244793750 btn "
      type="button"
    >
      <div
        class="text"
      />
    </button>
    <button
      class="jsx-3238131798 btn "
      type="button"
    >
      <div
        class="text"
      />
    </button>
    <button
      class="jsx-1869087094 btn "
      type="button"
    >
      <div
        class="text"
      />
    </button>
    <button
      class="jsx-3108745814 btn "
      type="button"
    >
      <div
        class="text"
      />
    </button>
    <button
      class="jsx-2241561397 btn "
      type="button"
    >
      <div
        class="text"
      />
    </button>
  </div>
</div>
`;
